src/app/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
   @apply h-full w-full font-inter text-white
   overflow-x-hidden bg-main;
}
body._lock-scroll {
   @apply overflow-hidden;
}
.wrapper {
   @apply flex flex-col h-full w-full;
}
.container {
   @apply max-w-container px-container h-full mx-auto;
}
.main {
   @apply flex-grow;
}
.section {
   @apply md:py-20 py-10;
}
.title {
   @apply font-bold md:pb-14 pb-7;
}

h1 {
   @apply text-5xl leading-normal font-medium;
}
h2 {
   @apply md:text-4xl text-2xl leading-normal font-medium;
}
h3 {
   @apply md:text-2xl text-xl leading-8 font-medium;
}
h4 {
   @apply md:text-xl text-base leading-8 font-medium;
}

.swiper {
   @apply overflow-visible #{!important};
}
.swiper-wrapper {
   @apply items-center overflow-visible #{!important};
}
.swiper-slide {
   @apply transition-all self-stretch h-auto #{!important};
}
.swiper-slide-prev {
   @apply xl:-translate-x-3 lg:-translate-x-2
   md:-translate-x-4 sm:-translate-x-3 -translate-x-1 #{!important};
}
.swiper-slide-next {
   @apply xl:translate-x-3 lg:translate-x-2
   md:translate-x-4 sm:translate-x-3 translate-x-1 #{!important};
}
.swiper-slide-active {
   @apply scale-110  #{!important};
}

.swiper-button-disabled {
   @apply opacity-50;
}

